--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Conventional Changelog Action
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3
@@ -16,6 +19,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           output-file: "false"
           skip-on-empty: "true"
+
       - name: Create Draft Release
         uses: actions/create-release@v1
         env:
