--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "prettier",
+  "private": true,
   "main": "./lib/inkdrop-prettier",
   "version": "1.1.0",
   "description": "Inkdrop plugin to integrate prettier",
@@ -8,6 +9,10 @@
   "license": "MIT",
   "engines": {
     "inkdrop": "^4.x"
+  },
+  "scripts": {
+    "link": "ipm link --dev",
+    "unlink": "ipm unlink --dev"
   },
   "dependencies": {
     "prettier": "^2.0.5"
